--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "autoload": {
         "psr-4": {
-            "pc-brainy\\lessphp\\": ""
+            "brainy\\lessphp\\": ""
         }
     }
 }
