--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
-		"oyejorge/less.php": "*"
+		"oyejorge/less.php": "dev-master"
     },
     "extra": {
         "yii\\composer\\Installer::postCreateProject": {
